--- a/landscape-tablets-styles.css
+++ b/landscape-tablets-styles.css
@@ -122,3 +122,16 @@ button {
     padding: 5px;
     font-size: 2.25em;
 }
+.resume-head-background {
+	background: url('resume-head-laptop+.svg');
+	background-position: top center;
+	height: 275px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+}
+#resume-h1 {
+	margin: 12% 25% 12% 25%;
+	padding: 5px;
+	font-size: 3em;
+}
