--- a/laptops-styles.css
+++ b/laptops-styles.css
@@ -114,3 +114,16 @@ button {
         padding: 5px;
         font-size: 3em;
     }
+    .resume-head-background {
+        background: url('resume-head-laptop+.svg');
+        background-position: top center;
+        height: 350px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+    }
+    #resume-h1 {
+        margin: 12% 30% 12% 30%;
+        padding: 5px;
+        font-size: 3em;
+    }
