updates to carousel

--- a/styles.css
+++ b/styles.css
@@ -347,6 +347,7 @@ ul {
     
     /* Slideshow container */
     .slideshow-container {
+		width: 90%;
       max-width: 1000px;
       position: relative;
       margin: auto;
