--- a/mobile-styles.css
+++ b/mobile-styles.css
@@ -154,3 +154,16 @@ button {
 	padding: 5px;
 	font-size: 2.5em;
 }
+#collage-head-background {
+	background: url('collage-head-mobile.svg');
+	background-position: top center;
+	height: 400px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+}
+.collage-h1 {
+	margin: 25% 15% 9% 15%;
+	padding: 5px;
+	font-size: 2.25em;
+}
