--- a/styles.css
+++ b/styles.css
@@ -353,17 +353,19 @@ ul {
 	margin-right: 0;
 }
 .access-project-head {
-	margin-top: 2%;
+	margin-top: 2vw;
 	width: 20%;
 	text-align: right;
+	font-size: 3vw;
 }
 .access-project-links {
 	text-align: left;
+	margin-top: 2vw;
 }
 .access-project-links a {
 	color: black;
 	text-decoration: none;
-	font-size: 2.25vw;
+	font-size: 3vw;
 }
 .access-project-links a:hover {
 	color: rgb(12, 12, 176);
