--- a/styles.css
+++ b/styles.css
@@ -374,6 +374,25 @@ ul {
 .embed-caption {
 	margin: 1% 2% 1% 2%;
 }
+/* Validator Download Page Styling */
+#validator-download-page {
+	height: 300px;
+	width: 100%;
+	/* width: 100%; */
+	background-color: green;
+	/* margin: 5% 10%; */
+}
+#validator-download {
+	color: black;
+	text-decoration: none;
+	font-size: 4vw;
+}
+#validator-download-h1 {
+	margin: 10% 20%;
+}
+#validator-download:hover {
+	text-decoration: underline;
+}
 /* Carousel */
 * {box-sizing: border-box}
     body {font-family: Verdana, sans-serif; margin:0}
