updates to goodreads article page

--- a/styles.css
+++ b/styles.css
@@ -493,7 +493,7 @@ ul {
 
 /* goodreads vis page styles */
 .sub-portfolio-head-background {
-	background-color: purple;
+	background-color: #f1f1f1;
 }
 .subpage-content {
 	display: flex;
