--- a/extra-large-devices-styles.css
+++ b/extra-large-devices-styles.css
@@ -144,3 +144,16 @@ font-size: 2vw;
     padding: 5px;
     font-size: 3.5em;
 }
+#goodreads-head-background {
+    background: url('');
+    background-position: top center;
+    height: 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+.goodreads-h1 {
+    margin: 8% 30% 8% 30%;
+    padding: 5px;
+    font-size: 3.5em;
+}
