adding header images for goodreads pages

--- a/landscape-tablets-styles.css
+++ b/landscape-tablets-styles.css
@@ -148,3 +148,16 @@ button {
 	padding: 5px;
 	font-size: 3em;
 }
+#goodreads-head-background {
+	background: url('images/goodreads-head-laptop+.svg');
+	background-position: top center;
+	height: 275px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+}
+.goodreads-h1 {
+	margin: 9% 16% 9% 16%;
+	padding: 5px;
+	font-size: 2em;
+}
