--- a/extra-large-devices-styles.css
+++ b/extra-large-devices-styles.css
@@ -145,7 +145,7 @@ font-size: 2vw;
     font-size: 3.5em;
 }
 #goodreads-head-background {
-    background: url('');
+    background: url('images/goodreads-head-laptop+.svg');
     background-position: top center;
     height: 400px;
     background-repeat: no-repeat;
@@ -153,7 +153,7 @@ font-size: 2vw;
     width: 100%;
 }
 .goodreads-h1 {
-    margin: 8% 30% 8% 30%;
+    margin: 8% 20% 8% 20%;
     padding: 5px;
-    font-size: 3.5em;
+    font-size: 2.5em;
 }
