--- a/laptops-styles.css
+++ b/laptops-styles.css
@@ -140,3 +140,16 @@ button {
         padding: 5px;
         font-size: 3.5em;
     }
+    #goodreads-head-background {
+        background: url('images/goodreads-head-laptop+.svg');
+        background-position: top center;
+        height: 350px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+    }
+    .goodreads-h1 {
+        margin: 9% 22% 9% 22%;
+        padding: 5px;
+        font-size: 2.25em;
+    }
